# BERT-with-Synthetic-Data

./: .gitignore  biosses.py  main.py  pyproject.toml
bert-superglue-cb/runs/Nov27_15-08-12_Jin/: events.out.tfevents.1764227293.Jin.15316.0
data/biosses/gpt-5.1/: synthetic-5-100.jsonl
data/biosses/original/: test.jsonl  train.jsonl
data/super_glue-cb/gpt-4o-mini/: synthetic-5-25.jsonl  (+1 more)
test/: model_path.json  test.py
test/submission/: CB-mix-1.jsonl  CB-mix-2.jsonl  CB-mix-3.jsonl  CB-original.jsonl  CB-synthetic-1.jsonl  CB-synthetic-3.jsonl  CB.jsonl  COPA-mix-1.jsonl
train/: setting.yaml  train_biosses.py  train_one.py
train/configs/: biosses-mix-1.yaml  biosses-mix-20.yaml  biosses-mix-5.yaml  biosses-original.yaml  biosses-synthetic-1.yaml  biosses-synthetic-20.yaml  biosses-synthetic-5.yaml  cb-mix-scale-1.yaml  cb-mix-scale-2.yaml  cb-mix-scale-3.yaml  cb-original.yaml  cb-synthetic-scale-1.yaml  cb-synthetic-scale-3.yaml  copa-mix-scale-1.yaml  copa-mix-scale-2.yaml  copa-mix-scale-3.yaml  copa-original.yaml  copa-synthetic-scale-1.yaml  copa-synthetic-scale-3.yaml  wsc-mix-scale-1.yaml  wsc-mix-scale-2.yaml  wsc-mix-scale-3.yaml  wsc-original.yaml  wsc-synthetic-scale-1.yaml  wsc-synthetic-scale-3.yaml
train/configs(done)/: cb-mix-scale-2.yaml  cb-mix-scale-3.yaml  copa-mix-scale-1.yaml  copa-mix-scale-2.yaml  copa-mix-scale-3.yaml  copa-original.yaml  copa-synthetic-scale-1.yaml  copa-synthetic-scale-3.yaml  wsc-mix-scale-3.yaml  wsc-original.yaml  wsc-synthetic-scale-3.yaml  wsc-test.yaml
utils/: utils.py
validate/: validate.py
(+8 files in other folders)
