[project]
name = "bert-with-sythetic-data"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "datasets==3.6.0",
  "evaluate>=0.4.6",
  "huggingface-hub[hf-xet]==0.33.2",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "scikit-learn>=1.7.2",
  "tensorboard>=2.20.0",
  "tqdm==4.67.1",
  "transformers[torch]==4.53.1",
]

[project.optional-dependencies]
cpu = ["torch==2.6.0", "torchaudio==2.6.0", "torchvision==0.21.0"]
cu124 = ["torch==2.6.0", "torchaudio==2.6.0", "torchvision==0.21.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
